--- a/daikoku/javascript/src/style/components/apicard.scss
+++ b/daikoku/javascript/src/style/components/apicard.scss
@@ -127,6 +127,13 @@ a.card-link:active {
 }
 
 .api-card {
+  h3 {
+    margin: 0
+  }
+
+  .api-card__header {
+    margin-bottom: 1rem;
+  }
 
   &:hover {
     background-color: rgba(0, 0, 0, 0.05);
@@ -143,4 +150,9 @@ a.card-link:active {
       display: block;
     }
   }
+}
+
+
+.api-card.deprecated h3 {
+  // text-decoration: line-through;
 }
