--- a/daikoku/javascript/src/style/components/pricingCard.scss
+++ b/daikoku/javascript/src/style/components/pricingCard.scss
@@ -156,7 +156,7 @@
 
       .feature__description {
         font-size: .9rem;
-        text-wrap: nowrap;
+        text-wrap: wrap;
       }
 
       .edition-icon {
