--- a/daikoku/javascript/src/style/components/pricingCard.scss
+++ b/daikoku/javascript/src/style/components/pricingCard.scss
@@ -12,6 +12,7 @@
 
   .dropdown-menu-button {
     color: variables.$card-header-bg-color;
+
     &:hover {
       color: color-mix(in srgb, var(--card-header-bg-color, #404040), white 30%);
     }
@@ -86,52 +87,52 @@
     padding: 0rem 1rem .5rem 1rem;
 
     .usage-plan__card__action-button {
-        align-self: flex-end;
-    
-        // margin: 5px 10px;
-        width: 100%;
-        background-color: variables.$card-header-bg-color;
-        color: variables.$card-header-text-color;
-        border: 1px solid variables.$level2_text-color;
-        border-radius: 5px;
-        padding: .5rem;
-    
-        position: relative;
+      align-self: flex-end;
 
-        display: flex;
-        justify-content: center;
+      // margin: 5px 10px;
+      width: 100%;
+      background-color: variables.$card-header-bg-color;
+      color: variables.$card-header-text-color;
+      border: 1px solid variables.$level2_text-color;
+      border-radius: 5px;
+      padding: .5rem;
 
-        width: fit-content;
-    
-        &:hover {
-          color: variables.$card-header-bg-color;
-          background-color: variables.$card-header-text-color;
-    
-          box-shadow: 3px 3px 0 variables.$card-header-bg-color;
-        }
-    
-        &.inactive {
-          cursor: not-allowed;
-    
-          &::before {
-            content: "";
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: rgba(255, 255, 255, 0.2);
-          }
-        }
-    
-        &:focus,
-        &:active {
-          color: variables.$card-header-bg-color;
-          background-color: variables.$card-header-text-color;
-          box-shadow: 1px 1px 0 variables.$card-header-bg-color;
-          transform: translate(2px, 2px);
+      position: relative;
+
+      display: flex;
+      justify-content: center;
+
+      width: fit-content;
+
+      &:hover {
+        color: variables.$card-header-bg-color;
+        background-color: variables.$card-header-text-color;
+
+        box-shadow: 3px 3px 0 variables.$card-header-bg-color;
+      }
+
+      &.inactive {
+        cursor: not-allowed;
+
+        &::before {
+          content: "";
+          position: absolute;
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 100%;
+          background: rgba(255, 255, 255, 0.2);
         }
       }
+
+      &:focus,
+      &:active {
+        color: variables.$card-header-bg-color;
+        background-color: variables.$card-header-text-color;
+        box-shadow: 1px 1px 0 variables.$card-header-bg-color;
+        transform: translate(2px, 2px);
+      }
+    }
 
 
 
@@ -174,25 +175,34 @@
           display: block;
         }
       }
+
+      &.no-decoration {
+        cursor: default !important;
+
+        h4 {
+          text-decoration: none !important;
+        }
+      }
     }
+
+
   }
 }
 
 @media screen and (max-width: 1350px) {
   .usage-plan__card {
-      width: calc(33% - 20px); 
+    width: calc(33% - 20px);
   }
 }
 
 @media screen and (max-width: 1100px) {
   .usage-plan__card {
-      width: calc(50% - 10px);
+    width: calc(50% - 10px);
   }
 }
 
 @media screen and (max-width: 850px) {
   .usage-plan__card {
-      width: 100%;
+    width: 100%;
   }
 }
-
