--- a/daikoku/javascript/src/style/components/switch.scss
+++ b/daikoku/javascript/src/style/components/switch.scss
@@ -1,87 +1,196 @@
 @use "../variables";
 
-/* The switch - the box around the slider */
-.switch {
-  position: relative;
-  display: inline-block;
-  width: 60px;
-  height: 34px;
+// /* The switch - the box around the slider */
+// .switch-button {
+//   position: relative;
+//   display: inline-block;
+//   width: 60px;
+//   height: 34px;
+// }
+
+// /* Hide default HTML checkbox */
+// .switch-button input {display:none;}
+
+// .switch-button--item {
+//   display: flex;
+//   align-items: center;
+
+//   .switch-button__label {
+//     // font-weight: bold;
+//     margin-right: 10px;
+//   }
+// }
+
+// /* The slider */
+// .slider {
+//   position: relative;
+//   cursor: pointer;
+//   top: 0;
+//   left: 0;
+//   right: 0;
+//   bottom: 0;
+//   background-color: #ccc;
+//   -webkit-transition: .4s;
+//   transition: .4s;
+// }
+
+// .slider:before {
+//   position: absolute;
+//   content: "";
+//   height: 14px;
+//   width: 14px;
+//   left: 1px;
+//   bottom: 1px;
+//   background-color: #fff;
+//   -webkit-transition: .4s;
+//   transition: .4s;
+// }
+
+// input:checked + .slider {
+//   background-color: variables.$success-color;
+// }
+// input:not(:checked) + .slider {
+//   background-color: variables.$error-color;
+// }
+
+// input:focus + .slider {
+//   box-shadow: 0 0 1px variables.$success-color;
+// }
+
+// input:disabled + .slider {
+//   background-color: #ccc;
+// }
+
+// input:checked + .slider:before {
+//   -webkit-transform: translateX(14px);
+//   -ms-transform: translateX(14px);
+//   transform: translateX(14px);
+// }
+
+// /* Rounded sliders */
+// .slider.round {
+//   border-radius: 17px;
+
+//   width: 30px;
+//   height: 16px;
+// }
+
+// .slider.round:before {
+//   border-radius: 50%;
+// }
+
+// .switch-button--disabled {
+//   cursor: not-allowed;
+//   label {
+//     pointer-events: none;
+//   }
+// }
+
+:root {
+  --active-color: #1bc665;
+  --inactive-color: #e1413e;
 }
 
-/* Hide default HTML checkbox */
-.switch input {display:none;}
+.switch-button-container.loading .switch-button {
+  pointer-events: none;
+}
 
-.switch--item {
+.switch-button-container.loading .switch-button .slider {
+  width: 34px;
+  background-color: #9b999b;
+}
+
+.switch-button-container.loading .switch-button .slider::before {
+  border: 3px solid #9b999b;
+  border-top: 3px solid #6174f0;
+  // bottom: 0;
+  // right: 0;
+  // left: 0;
+}
+
+.switch-button-container.active .switch-button .slider::before {
+  right: 3px;
+  left: unset;
+  // justify-self: end;
+
+}
+
+.switch-button-container.active.loading .switch-button .slider::before {
+  // right: 0px;
+  // left: unset;
+}
+
+.switch-button {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  height: 34px;
+  width: 56px;
+}
+
+.switch-button input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.switch-button .slider {
+  position: absolute;
+  z-index: 10;
+  cursor: pointer;
+  width: 100%;
+  height: 100%;
+  background-color: var(--inactive-color);
+  transition: all .3s ease-in-out
+}
+
+.switch-button .slider::before {
+  content: "";
+  position: absolute;
+  height: 28px;
+  width: 28px;
+  left: 3px;
+  bottom: 3px;
+  background-color: rgb(241, 241, 241);
+  transition: .3s ease;
+  transition-property: background-color;
+}
+
+.switch-button-container.loading .switch-button .slider::before {
+  animation: spin 1s ease infinite;
+}
+
+.switch-button-container.active .switch-button .slider.round {
+  background-color: var(--active-color);
+}
+.switch-button-container .switch-button .slider.round {
+  background-color: var(--inactive-color);
+}
+
+.switch-button-container.disabled .switch-button .slider.round {
+  background-color: grey;
+  cursor: not-allowed;
+}
+
+.switch-button .slider.round {
+  border-radius: 28px;
+  box-shadow: 2px 2px 5px rgb(0, 0, 0, .1);
+
   display: flex;
   align-items: center;
-
-  .switch__label {
-    // font-weight: bold;
-    margin-right: 10px;
-  }
+  justify-content: center;
 }
 
-/* The slider */
-.slider {
-  position: relative;
-  cursor: pointer;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: #ccc;
-  -webkit-transition: .4s;
-  transition: .4s;
-}
-
-.slider:before {
-  position: absolute;
-  content: "";
-  height: 14px;
-  width: 14px;
-  left: 1px;
-  bottom: 1px;
-  background-color: #fff;
-  -webkit-transition: .4s;
-  transition: .4s;
-}
-
-input:checked + .slider {
-  background-color: variables.$success-color;
-}
-input:not(:checked) + .slider {
-  background-color: variables.$error-color;
-}
-
-input:focus + .slider {
-  box-shadow: 0 0 1px variables.$success-color;
-}
-
-input:disabled + .slider {
-  background-color: #ccc;
-}
-
-input:checked + .slider:before {
-  -webkit-transform: translateX(14px);
-  -ms-transform: translateX(14px);
-  transform: translateX(14px);
-}
-
-/* Rounded sliders */
-.slider.round {
-  border-radius: 17px;
-
-  width: 30px;
-  height: 16px;
-}
-
-.slider.round:before {
+.switch-button .slider.round::before {
   border-radius: 50%;
 }
 
-.switch--disabled {
-  cursor: not-allowed;
-  label {
-    pointer-events: none;
+@keyframes spin {
+  from {
+    transform: rotate(0deg);
+  }
+
+  to {
+    transform: rotate(360deg);
   }
 }
