--- a/daikoku/javascript/src/style/components/badge.scss
+++ b/daikoku/javascript/src/style/components/badge.scss
@@ -1,9 +1,38 @@
 @use "../variables";
+@use "sass:color";
+
+@mixin badge-custom($bg, $text) {
+  background-color: $bg;
+  color: $text;
+  position: relative;
+  z-index: 0;
+  cursor: pointer;
+  padding: .5rem;
+}
+
+$badge-colors: (
+  custom: (bg: variables.$badge-tags-bg-color, text: variables.$badge-tags-text-color),
+  info: (bg: variables.$info-color, text: #fff),
+  success: (bg: variables.$success-color, text: #fff),
+  warning: (bg: variables.$warning-color, text: #fff),
+  danger: (bg: variables.$danger-color, text: #fff),
+
+);
+
+@each $name, $colors in $badge-colors {
+  .badge-custom-#{$name} {
+    @include badge-custom(map-get($colors, bg),
+      map-get($colors, text));
+  }
+}
+
+
 
 .badge-custom {
   background-color: variables.$badge-tags-bg-color;
-  color:variables.$badge-tags-text-color;
-  &:hover{
+  color: variables.$badge-tags-text-color;
+
+  &:hover {
     background-color: variables.$badge-tags-bg-hover-color;
   }
 }
