--- a/daikoku/javascript/src/style/variables.scss
+++ b/daikoku/javascript/src/style/variables.scss
@@ -51,6 +51,7 @@ $success-color: #{"var(--success-color, #65B741)"}; //status
 $info-color: #{"var(--info-color, #17a2b8)"}; //status
 $warning-color: #{"var(--warning-color, #ffc107)"}; //status
 $danger-color: #{"var(--danger-color, #dc3545)"}; //status
+$neutral-color: #{"var(--neutral-color, #4e5760)"}; //status
 
 
 $card-header-bg-color : #{"var(--card_header-bg-color, #404040)"};
