--- a/daikoku/javascript/src/style/components/btn.scss
+++ b/daikoku/javascript/src/style/components/btn.scss
@@ -71,7 +71,8 @@ button {
 .btn-outline-info:hover,
 .btn-outline-danger:hover,
 .btn-outline-success:hover,
-.btn.btn-danger:hover {
+.btn.btn-danger:hover,
+.btn.btn-secondary:hover {
   color: #fff;
 }
 
@@ -91,6 +92,20 @@ button {
   &:hover,
   &.active {
     color: #9e9e9e !important;
+  }
+}
+
+.btn-outline-secondary,
+.btn-outline-secondary:focus {
+  background-color: #fff;
+  color: variables.$neutral-color;
+  border-color: variables.$neutral-color;
+
+  &:hover,
+  &.active {
+    color: #fff;
+    background-color: variables.$neutral-color;
+    border-color: variables.$neutral-color;
   }
 }
 
