--- a/daikoku/javascript/src/style/components/badge.scss
+++ b/daikoku/javascript/src/style/components/badge.scss
@@ -4,7 +4,7 @@
 
 @mixin badge-custom($bg, $text) {
   background-color: $bg;
-  color: color-mix(in srgb, $bg 50%, #000);;
+  color: color-mix(in srgb, $bg 50%, #000);
   position: relative;
   z-index: 0;
   cursor: pointer;
