--- a/daikoku/javascript/src/style/layout/style.scss
+++ b/daikoku/javascript/src/style/layout/style.scss
@@ -139,6 +139,16 @@ img:hover+.changePicture,
   opacity: 0.5;
 }
 
+.bg-success {
+  background-color: variables.$success-color;
+}
+.bg-info {
+  background-color: variables.$info-color;
+}
+.bg-danger {
+  background-color: variables.$danger-color;
+}
+
 
 /* rwd */
 @media screen and (min-width: 576px) {
