--- a/daikoku/javascript/src/style/layout/style.scss
+++ b/daikoku/javascript/src/style/layout/style.scss
@@ -148,6 +148,15 @@ img:hover+.changePicture,
 .bg-danger {
   background-color: variables.$danger-color;
 }
+.color-success {
+  color: variables.$success-color;
+}
+.color-info {
+  color: variables.$info-color;
+}
+.color-danger {
+  color: variables.$danger-color;
+}
 
 
 /* rwd */
