Add cursor information on disbled buttons

--- a/daikoku/javascript/src/style/components/notification.scss
+++ b/daikoku/javascript/src/style/components/notification.scss
@@ -138,6 +138,7 @@ $level1-darken-color: color-mix(in srgb, variables.$level2_bg-color 95%, #000);
 
         &:disabled {
           color: color-mix(in srgb, variables.$level1_text-color 50%, #fff);
+          cursor: not-allowed;
         }
 
         &:hover {
