--- a/daikoku/javascript/src/style/components/badge.scss
+++ b/daikoku/javascript/src/style/components/badge.scss
@@ -4,7 +4,8 @@
 
 @mixin badge-custom($bg, $text) {
   background-color: $bg;
-  color: color-mix(in srgb, $bg 50%, #000);
+  // color: color-mix(in srgb, $bg 50%, #000);
+  color: $text;
   position: relative;
   z-index: 0;
   cursor: pointer;
@@ -13,10 +14,10 @@
 
 $badge-colors: (
   custom: (bg: variables.$badge-tags-bg-color, text: variables.$badge-tags-text-color),
-  info: (bg: variables.$info-color, text: #fff),
-  success: (bg: variables.$success-color, text: #fff),
-  warning: (bg: variables.$warning-color, text: #fff),
-  danger: (bg: variables.$danger-color, text: #fff),
+  info: (bg: variables.$info-color, text: color-mix(in srgb, variables.$info-color 20%, #000)),
+  success: (bg: variables.$success-color, text: color-mix(in srgb, variables.$success-color 10%, #000)),
+  warning: (bg: variables.$warning-color, text: color-mix(in srgb, variables.$warning-color 20%, #000)),
+  danger: (bg: variables.$danger-color, text: color-mix(in srgb, variables.$danger-color 0%, #fff)),
 
 );
 
