--- a/daikoku/javascript/src/style/components/modal.scss
+++ b/daikoku/javascript/src/style/components/modal.scss
@@ -11,6 +11,7 @@
 
 .modal.show{
   display: block !important;
+  z-index: 10001;
 }
 
 
@@ -183,3 +184,10 @@
 .modal-content{
   border-color: var(--bs-modal-header-border-color)
 }
+
+// .modal-body .btn-close.absolute {
+//   position: absolute;
+//   top: 10px;
+//   right: 10px;
+
+// }
