--- a/daikoku/javascript/src/style/components/dashboard.scss
+++ b/daikoku/javascript/src/style/components/dashboard.scss
@@ -1,72 +1,9 @@
 @use "../variables";
 @use "sass:color";
 
-.notification-link,
-.messages-link {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  position: relative;
-
-  &-color {
-    color: variables.$sidebar-text-color;
-
-    &:hover {
-      color: variables.$sidebar-text-hover-color;
-      text-decoration: none;
-
-      &::before {
-        border-color: variables.$sidebar-text-hover-color;
-      }
-    }
-  }
-}
-
-.unread-notifications::before {
-  content: "";
-  width: 10px;
-  height: 10px;
-  display: block;
-  position: absolute;
-  top: -3px;
-  right: 3px;
-  background-color: variables.$danger-color;
-  border-radius: 50%;
-  box-sizing: content-box;
-  z-index: 1;
-}
-
-.notification-prop a:hover {
-  color: #fff; //fixme: better color
-}
-
-// ------- new page ---------
-
-.selected-filter {
-  width: fit-content;
-  padding: .3rem .6rem;
-  border-radius: 4px;
-  border: 1px solid variables.$level2_text-color;
-  background-color: variables.$level3_bg-color;
-
-  cursor: pointer;
-
-  &:hover {
-    border-color: variables.$level3_bg-color;
-  }
-
-  &:active {
-    background-color: variables.$level2_bg-color; //fixme: ????
-  }
-}
-
-.filters-label {
-  font-weight: bold;
-}
-
 $level1-darken-color: color-mix(in srgb, variables.$level2_bg-color 95%, #000);
 
-.notification-table {
+.api-table {
   display: flex;
   flex-direction: column;
   border-radius: 5px;
@@ -75,30 +12,17 @@ $level1-darken-color: color-mix(in srgb, variables.$level2_bg-color 95%, #000);
   background-color: variables.$level2_bg-color;
   color: variables.$level2_text-color;
 
-
-  .table-header {
-    padding: 2rem 1rem 1rem 1rem;
-
-    .table-title {
-      font-weight: bold;
-      margin: 0;
-    }
-
-    .table-description {
-      font-weight: lighter;
-    }
-  }
-
   .select-all-row {
     background-color: $level1-darken-color;
     padding: 1rem 1rem !important;
     font-size: 1rem !important;
-    height: 4rem;
+    height: 3rem;
 
     // input.form-check-input {
     //   margin-left: .7rem!important;
     // }
   }
+
 
   .table-rows {
     display: flex;
@@ -107,16 +31,19 @@ $level1-darken-color: color-mix(in srgb, variables.$level2_bg-color 95%, #000);
     color: variables.$level3_text-color;
     padding: 0;
     margin: 0;
+
+    list-style: none;
   }
 
   .table-row {
     display: grid;
-    grid-template-columns: 5fr 15fr 15fr 30fr 15fr 12fr 7fr 15fr;
+    grid-template-columns: 15fr 15fr 15fr 30fr 15fr;
     gap: 1rem;
     padding: .875rem 1rem;
     align-items: center;
     border-bottom: 1px solid variables.$level1_bg-color;
     font-size: 0.875rem;
+
 
     &:hover {
       background-color: color-mix(in srgb, variables.$level3_bg-color 90%, #000);
@@ -223,30 +150,4 @@ $level1-darken-color: color-mix(in srgb, variables.$level2_bg-color 95%, #000);
     border: none;
   }
 
-}
-
-
-
-.action-container {
-  display: grid;
-  grid-template-columns: 80fr 20fr;
-  gap: 1rem;
-}
-
-.select-menu-item:hover {
-  background-color: #eee;
-}
-
-.notification-subscription-demand-summary {
-  display: flex;
-  flex-direction: column;
-  gap: .1rem;
-
-  .label {
-    font-weight: bold;
-  }
-
-  &+.notification-subscription-demand-summary {
-    margin-top: 2rem;
-  }
 }
