--- a/daikoku/javascript/src/style/main.scss
+++ b/daikoku/javascript/src/style/main.scss
@@ -42,3 +42,4 @@
 @use 'components/tabs';
 @use 'components/apiSubscription.scss';
 @use 'components/pricingCard.scss';
+@use 'components/dashboard.scss';
