--- a/daikoku/public/themes/default.css
+++ b/daikoku/public/themes/default.css
@@ -15,8 +15,8 @@
   --level3_link-hover-color: #000;
   --level3_link-hover-bg-color: grey;
 
-  --sidebar-bg-color: #e5e7ea;
-  --sidebar-text-color: #4c4c4d;
+  --sidebar-bg-color: #29438D;
+  --sidebar-text-color: #fff;
   --sidebar-text-hover-color: orange;
 
   --menu-bg-color: #fff;
